overflow fix

--- a/app/sass/rating.sass
+++ b/app/sass/rating.sass
@@ -53,10 +53,18 @@
                         top: 2px
                         right: 18px
                     p.place
+                        max-width: 100%
+                        word-break: break-all
+                        overflow-wrap: break-word
+                        overflow: hidden
                         font-size: 22px
                         font-family: "Tele2DisplaySerifBoldShortWeb"
                         line-height: 28px
                     p.place-title
+                        max-width: 100%
+                        word-break: break-all
+                        overflow-wrap: break-word
+                        overflow: hidden
                         font-family: 'Tele2TextSansRegularShortWEB'
                         font-size: 13px
                         line-height: 13px
